<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:paddingTop="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:background="#FFFFFF"
                android:layout_height="wrap_content">


    <ImageView
        android:layout_width="90dp"
        android:layout_height="70dp"
        android:id="@+id/iv_player_photo"
        android:src="@drawable/al_horford"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tv_player_position"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:textSize="13sp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/default_text"
        android:textColor="#000000"
        android:id="@+id/tv_player_name"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="CFA"

        android:paddingTop="2dp"
        android:textSize="10sp"
        android:textColor="#000000"
        android:id="@+id/tv_player_position"
        android:layout_below="@+id/tv_player_name"
        android:layout_alignLeft="@+id/tv_player_name"
        android:layout_alignStart="@+id/tv_player_name"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/assists"
        android:textSize="10sp"
        android:textColor="#6E6E6E"
        android:id="@+id/tv_assists"
        android:layout_alignTop="@+id/iv_player_photo"
        android:layout_toRightOf="@+id/iv_player_photo"
        android:layout_toEndOf="@+id/iv_player_photo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/rebounds"
        android:textSize="10sp"
        android:id="@+id/tv_rebounds"
        android:layout_below="@+id/tv_assists"
        android:layout_toRightOf="@+id/iv_player_photo"
        android:layout_toEndOf="@+id/iv_player_photo"
        android:layout_marginTop="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/steals"
        android:textSize="10sp"
        android:id="@+id/tv_steals"
        android:layout_alignBottom="@+id/iv_player_photo"
        android:layout_toRightOf="@+id/iv_player_photo"
        android:layout_toEndOf="@+id/iv_player_photo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/points"
        android:textColor="#000000"
        android:textSize="8sp"
        android:id="@+id/tv_points_label"

        android:layout_marginLeft="26dp"
        android:layout_marginStart="26dp"
        android:layout_alignTop="@+id/tv_rebounds"
        android:layout_toRightOf="@+id/tv_assists"
        android:layout_toEndOf="@+id/tv_assists"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/textView4"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/tv_points_label"
        android:layout_toEndOf="@+id/tv_points_label"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="55"
        android:id="@+id/tv_points"
        android:textColor="#000000"
        android:layout_above="@+id/tv_points_label"
        android:layout_toLeftOf="@+id/textView4"
        android:layout_toStartOf="@+id/textView4"/>


</RelativeLayout>